input model
